fix: right-aligned column caret fix for contacts table

--- a/src/common/Table/Table.css
+++ b/src/common/Table/Table.css
@@ -43,6 +43,11 @@
   grid-template-columns: auto 1fr;
 }
 
+.table-wrapper rux-table-header-cell:has(rux-icon.visible) div.right-align,
+.table-wrapper rux-table-header-cell div.right-align {
+  grid-template-columns: auto 32px;
+}
+
 .table-wrapper rux-table-header-cell span {
   overflow: hidden;
   white-space: nowrap;
@@ -63,8 +68,6 @@ rux-container .table-wrapper {
   text-align: right;
 }
 
-/* to make up the difference for the sort icon in header cell */
-.table-wrapper rux-table-cell.right-align::after {
-  content: '';
-  padding-right: var(--spacing-8);
+rux-table-cell.right-align span.right-align {
+  padding-inline-end: var(--spacing-8);
 }
